around me screen and behaviour

--- a/page/view/home.jade
+++ b/page/view/home.jade
@@ -1,7 +1,7 @@
 span.home-poster( aria-hidden="true" )
 div.screen-content
 
-  button.button.button-action.button-around( type="button" aria-label="Find theaters around me" ) Around me
+  a.button.button-action.button-around( href="/around" aria-label="Find theaters around me" ) Around me
 
   a.button.button-reverse( href="/favorites" ) My favorite theaters
 
