--- a/page/view/movies-list.jade
+++ b/page/view/movies-list.jade
@@ -1,5 +1,5 @@
 if movies
-  ul.movies-list
+  ul.item-list
     each movie in movies
       li.movie-item
         a.item-title( href="/movies/#{movie.id}" )!= movie.name
