fix search labels on home screen

--- a/style/breakpoint/default/component-home.styl
+++ b/style/breakpoint/default/component-home.styl
@@ -84,5 +84,6 @@
          &:focus
             display: block
 
-   label
-      text-align: center
+      label
+         text-align: center
+         line-height: ( 26/12 )
