--- a/page/view/menu.jade
+++ b/page/view/menu.jade
@@ -5,11 +5,17 @@ ul.menu-list.menu-screens
 
 span.dash-wrapper( aria-hidden="true" )
   include ../../_source/svg/pattern.svg
-section.menu-item.menu-favorites( class=!asFavorites ? 'empty' : '' )
+div.menu-item.menu-favorites( class=!asFavorites ? 'empty' : '' )
   a( href="/favorites" class=( key === current ? 'menu-item-active' : null ) )
     include ../../_source/svg/icon_favorites.svg
     include ../../_source/svg/icon_favorited.svg
     span Favorites
+
+span.dash-wrapper( aria-hidden="true" )
+  include ../../_source/svg/pattern.svg
+div.menu-item.menu-location( class=!asFavorites ? 'empty' : '' )
+  a( class=( key === current ? 'menu-item-active' : null ) )
+    span Change location (Paris)
 
 button.button.button-close( type="button" aria-controls="menu" aria-expanded="true" )
   include ../../_source/svg/icon_close.svg
