--- a/style/breakpoint/default/component-theater.styl
+++ b/style/breakpoint/default/component-theater.styl
@@ -54,15 +54,25 @@
    width: pc( 84/320 )
 
    span
+      background-color: $color-primary-light
       display: block
       overflow: hidden
       padding-top: ( 4%/3*100 )
-      background-color: $color-primary-light
+      position: relative
 
    img
       display: block
       height: 100%
+      left: 0
+      opacity: 0
       position: absolute
+      top: 0
+      transition: opacity 0.3s linear
+      width: 100%
+
+      &.show
+         opacity: 1
+
 
    & + .movie-infos
       width: pc( 236/320 )
