--- a/style/breakpoint/default/component-theater.styl
+++ b/style/breakpoint/default/component-theater.styl
@@ -54,7 +54,6 @@
    width: pc( 84/320 )
 
    span
-      background-color: $color-primary-light
       display: block
       overflow: hidden
       padding-top: ( 4%/3*100 )
@@ -63,12 +62,12 @@
    img
       display: block
       height: 100%
-      left: 0
+      left: 50%
       opacity: 0
       position: absolute
       top: 0
+      transform: translateX( -50% )
       transition: opacity 0.3s linear
-      width: 100%
 
       &.show
          opacity: 1
