fix menu button aria-attributes

--- a/page/view/menu.jade
+++ b/page/view/menu.jade
@@ -17,6 +17,6 @@ div.menu-item.menu-location( class=!asFavorites ? 'empty' : '' )
   a( class=( key === current ? 'menu-item-active' : null ) )
     span Change location (Paris)
 
-button.button.button-close( type="button" aria-controls="menu" aria-expanded="true" )
+button.button.button-close( type="button" aria-controls="menu" aria-expanded="false" )
   include ../../_source/svg/icon_close.svg
   span Close menu
