--- a/page/module/header.jade
+++ b/page/module/header.jade
@@ -3,7 +3,7 @@ header( role="banner" ).site-header
   h1.site-logo
     include ../../_source/svg/logo.svg
 
-  button.site-menu-button( type="button" aria-controls="menu" aria-expanded="true" )
+  button.site-menu-button( type="button" aria-controls="menu" aria-expanded="false" )
     include ../../_source/svg/icon_menu.svg
     span Menu
 
