--- a/page/view/home.jade
+++ b/page/view/home.jade
@@ -5,17 +5,10 @@ div.screen-content
 
   a.button.button-reverse( href="/favorites" ) My favorite theaters
 
-  section.home-find
+  nav.home-find
     h1.hidden Find a theater or movie
-
-    form#findMovie.form-quicksearch( action="/movies" )
-      span.input-floating
-        input#movieName( name="movieName" type="text" required )
-        label( for="movieName" ) Search a movie
-        button( type="submit" ) search
-
-    form#findTheater.form-quicksearch( action="/theaters" )
-      span.input-floating
-        input#theaterName( name="theaterName" type="text" required )
-        label( for="theaterName" ) Search a theater
-        button( type="submit" ) search
+    ul.find-list
+      li.find-item
+        a.find-link( href="/movies?search=true" ) Search a movie
+      li.find-item
+        a.find-link( href="/theaters?search=true" ) Search a theater
