create layer script for menu, location change and more

--- a/page/layout/default.jade
+++ b/page/layout/default.jade
@@ -31,5 +31,7 @@ html( class="no-js" lang=lang )
     main#main
       block content
 
+    include ../module/layer-location
+
     block script
       include ../module/script
