--- a/page/module/header.jade
+++ b/page/module/header.jade
@@ -7,6 +7,6 @@ header( role="banner" ).site-header
     include ../../_source/svg/icon_menu.svg
     span Menu
 
-  nav#menu.site-menu( role="navigation" aria-hidden="true" )
+  nav#menu.layer.site-menu( role="navigation" aria-hidden="true" )
     h1.hidden Menu
-    div.menu-wrapper
+    div.layer-wrapper
