--- a/page/view/menu.jade
+++ b/page/view/menu.jade
@@ -1,12 +1,12 @@
 ul.menu-list.menu-screens
   each menu, key in screens
     li.menu-item
-      a( href=menu.link class=( key === current ? 'menu-item-active' : null ) )!= menu.name
+      a( href=menu.link )!= menu.name
 
 span.dash-wrapper( aria-hidden="true" )
   include ../../_source/svg/pattern.svg
 div.menu-item.menu-favorites( class=!asFavorites ? 'empty' : '' )
-  a( href="/favorites" class=( key === current ? 'menu-item-active' : null ) )
+  a( href="/favorites" )
     include ../../_source/svg/icon_favorites.svg
     include ../../_source/svg/icon_favorited.svg
     span Favorites
@@ -15,7 +15,7 @@ if city
   span.dash-wrapper( aria-hidden="true" )
     include ../../_source/svg/pattern.svg
   div.menu-item.menu-location( class=!asFavorites ? 'empty' : '' )
-    a( class=( key === current ? 'menu-item-active' : null ) )
+    button.button.button-locationChange.layer-close( type="button" aria-controls="locationDialog" aria-expanded="false" )
       span Change location (#[span.menu-location-city!=city])
 
 button.button.button-close( type="button" aria-controls="menu" aria-expanded="false" )
