update layers button[aria-controls] selector to avoid trigger when using tabs

--- a/page/module/layer-location.jade
+++ b/page/module/layer-location.jade
@@ -15,6 +15,6 @@ section#locationDialog.layer.layer-location( role="dialog" aria-labelledby="dial
         label( for="locationSearch" ) Enter a location
 
 
-    button.button.button-close( type="button" aria-controls="locationDialog" aria-expanded="false" )
+    button.button.button-close.layer-control( type="button" aria-controls="locationDialog" aria-expanded="false" )
       include ../../_source/svg/icon_close.svg
       span Close
