--- a/page/module/layer-location.jade
+++ b/page/module/layer-location.jade
@@ -11,7 +11,7 @@ section#locationDialog.layer.layer-location( role="dialog" aria-labelledby="dial
 
     form#userLocation
       span.input-floating
-        input#locationSearch( name="location" type="search" pattern=".*" required )
+        input#locationSearch( name="location" type="search" pattern=".*" required autocomplete="off" )
         label( for="locationSearch" ) Enter a location
 
 
