--- a/page/view/theaters.jade
+++ b/page/view/theaters.jade
@@ -4,7 +4,7 @@ header.screen-header
   form#theaterFilter.screen-nav.screen-form
     span.input-floating
       include ../../_source/svg/icon_search.svg
-      input#theaterBlob( type="search" pattern=".*" required value="#{screenParams.filter || ''}" )
+      input#theaterBlob( type="text" pattern=".*" required value="#{screenParams.filter || ''}" autocomplete="off" )
       label( for="theaterBlob" ) Search theaters
 
 div.screen-content
