update user location to store city, area, and country and better handling of city through the app api calls
create city sanitize

--- a/page/view/menu.jade
+++ b/page/view/menu.jade
@@ -11,12 +11,12 @@ div.menu-item.menu-favorites( class=!asFavorites ? 'empty' : '' )
     include ../../_source/svg/icon_favorited.svg
     span Favorites
 
-if city
+if location
   span.dash-wrapper( aria-hidden="true" )
     include ../../_source/svg/pattern.svg
   div.menu-item.menu-location( class=!asFavorites ? 'empty' : '' )
     button.button.button-locationChange.layer-close.layer-control( type="button" aria-controls="locationDialog" aria-expanded="false" )
-      span Change location (#[span.menu-location-city!=city])
+      span Change location (#[span.menu-location-city!=location.city.long])
 
 button.button.button-close.layer-control( type="button" aria-controls="menu" aria-expanded="false" )
   include ../../_source/svg/icon_close.svg
