update loader design

--- a/page/module/loader.jade
+++ b/page/module/loader.jade
@@ -1,2 +1,4 @@
 span.loader-wrapper
+  include ../../_source/svg/loader-big.svg
+  include ../../_source/svg/loader-small.svg
   include ../../_source/svg/loader.svg
