add cache on API & theater info

--- a/page/view/movie.jade
+++ b/page/view/movie.jade
@@ -55,7 +55,7 @@ div.screen-content
         span.movie-artwork-wrapper
           img( src="/media/posters/#{id}" )
 
-      dl.movie-desc
+      dl.info-desc.info-movie
         if runtime
           dt Runtime
           dd.movie-runtime!= runtime
