--- a/style/breakpoint/default/component-movie.styl
+++ b/style/breakpoint/default/component-movie.styl
@@ -21,21 +21,9 @@
    font-size: rem( 14 )
    margin: rem( 4 ) 0
 
-.movie-desc
-   margin: 0
-   padding: rem( 15 ) 0
-
-   dt
-      font-size: rem( 14 )
+.info-movie
 
    dd
-      empty()
-      margin: 0 0 rem( 15 )
-      color: $color-primary-dark
-
-      &:empty
-         &:before
-            vertical-align: middle
 
       &.movie-runtime:before
          width: rem( 60 )
