--- a/style/breakpoint/default/component-menu.styl
+++ b/style/breakpoint/default/component-menu.styl
@@ -1,5 +1,6 @@
 .layer.site-menu
    background-color: rgba( $dark, 0 )
+   z-index: 15
 
    &:not( [aria-hidden=true] )
       background-color: rgba( $dark, 0.7 )
