implement service work with basic cache and poster cache

--- a/page/view/movie.jade
+++ b/page/view/movie.jade
@@ -53,7 +53,7 @@ div.screen-content
 
       figure.movie-artwork
         span.movie-artwork-wrapper
-          img( src="/media/posters/#{id}" )
+          img( src="/media/poster/#{id}" )
 
       dl.info-desc.info-movie
         if runtime
