--- a/page/view/theater.jade
+++ b/page/view/theater.jade
@@ -26,7 +26,7 @@ div.screen-content
             article.movie
               figure.movie-artwork
                 span.movie-artwork-wrapper
-                  img( src="/media/posters/#{movie.id}" )
+                  img( src="/media/poster/#{movie.id}" )
               div.movie-infos
                 h1.movie-title
                   a( href="/movies/#{movie.id}" )!= movie.name
