ios webapp metas

--- a/page/layout/default.jade
+++ b/page/layout/default.jade
@@ -8,6 +8,9 @@ html( class="no-js" lang=lang )
 
     title= title
 
+    meta( name="apple-mobile-web-app-capable" content="yes" )
+    meta( name="apple-mobile-web-app-status-bar-style" content="black" )
+
     //- Mobile
     meta( name="viewport" content=meta.viewport.join() )
 
