--- a/style/breakpoint/default/component-around.styl
+++ b/style/breakpoint/default/component-around.styl
@@ -16,3 +16,8 @@
 
    .screen-form
       display: none
+
+   .message-icon
+      .bar
+         margin-left: rem( 1 )
+         margin-top: rem( -1 )
