--- a/style/breakpoint/default/component-favorites.styl
+++ b/style/breakpoint/default/component-favorites.styl
@@ -13,3 +13,11 @@
       position: absolute
       top: 50%
       width: rem( 60 )
+
+   .message-block
+      svg
+         height: rem( 30 )
+         width: rem( 30 )
+
+   .message-title
+      margin-top: rem( 6 )
