--- a/style/breakpoint/default/component-header.styl
+++ b/style/breakpoint/default/component-header.styl
@@ -8,6 +8,17 @@
       .site-logo
          hide()
 
+   .button-back
+      display: none
+
+   &.header-back
+      .site-header-button
+         display: none
+
+      .button-back
+         display: block
+
+
 .site-logo
    height: rem( 62 )
    margin: 0 auto
